tests/baselines/reference/exportClassNameWithObjectSystem.errors.txt
tests/cases/conformance/externalModules/exportClassNameWithObjectSystem.ts(1,14): error TS2725: Class name cannot be 'Object' when targeting ES5 with module System.


==== tests/cases/conformance/externalModules/exportClassNameWithObjectSystem.ts (1 errors) ====
    export class Object {}
                 ~~~~~~
!!! error TS2725: Class name cannot be 'Object' when targeting ES5 with module System.
    